--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/recipe1.html">Recipes Folder</a>
+        <a href="./recipes/OldFashioned.html">Recipes Folder</a>
     </body>
     
 </html>
