--- a/cssSolution.html
+++ b/cssSolution.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>  
+        <link rel = "stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <title>CSS Solution 1</title>
     </head>
