--- a/cssSolution.html
+++ b/cssSolution.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>  
-        <link rel = "stylesheet" href="styles.css">
+    <head> 
         <meta charset="UTF-8">
-        <title>CSS Solution 1</title>
+        <title>CSS Solution 1</title> 
+        <style>
+           p{
+            background-color: green;
+            color: white;
+            font-size: 18px;
+           }
+        </style>
+        <link rel = "stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -12,7 +19,7 @@
     
         <p>I would like to be styled with internal method, please</p>
 
-        <button>Inline method</button>
+        <button style= "background-color:orange; font-size: 18px;">Inline Method</button>
     </body>
 
 </html>
